templates/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-be
  labels:
    app: community
    tier: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: community
      tier: backend
  template:
    metadata:
      labels:
        app: community
        tier: backend
    spec:
      containers:
        - name: community-be
          image: ghcr.io/joongsunyoon/ktb_homework_community:3461a888af864db6d3718549044afb46c330b079
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
