templates/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-fe
  labels:
    app: community
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: community
      tier: frontend
  template:
    metadata:
      labels:
        app: community
        tier: frontend
    spec:
      containers:
        - name: community-fe
          image: ghcr.io/joongsunyoon/ktb_homework_community_fe:521cc75219b9d66e3b351e21457b7e0e9a2e9cfb
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
