templates/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: community
  labels:
    app: community
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: community
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
