templates/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-fe
  labels:
    app: community
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: community
    tier: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
