templates/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: community
    tier: proxy
spec:
  type: NodePort
  selector:
    app: community
    tier: proxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30080
