templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-ingress
  labels:
    app: community
    tier: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pappus.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-fe
                port:
                  number: 80
